Fix PokemonStat alignment on mobile

--- a/a-challenger/src/index.css
+++ b/a-challenger/src/index.css
@@ -50,7 +50,6 @@ html {
   height: 96px;
   margin: 3px;
   text-align: center;
-  font-size: 10pt;
   text-transform: uppercase;
   font-size: 12px;
 }
@@ -68,9 +67,10 @@ html {
 
 .StatBar {
   height: 15px;
-  width: 230px;
-  display: inline-block;
-  
+  width: 100%;
+  max-width: 230px;
+  display: block;
+  margin-bottom: 2px;
 }
 
 .StatBar > span {
@@ -144,14 +144,6 @@ html {
 .PaginationButtonNext {
   grid-column-start: 3;
   grid-column-end: 4;
-}
-
-
-
-.PokemonStats-list {
-  list-style: none;
-  padding: 0;
-  text-align: right;
 }
 
 .normalType {
@@ -229,6 +221,7 @@ html {
     max-width: 992px;
     margin: 0 auto;
   }
+
   .App {
     min-height: 100%;
   }
@@ -238,8 +231,13 @@ html {
     grid-template-columns: 1fr 1fr 1fr;
     
   }
+  
+  .PokemonStats-list {
+    font-size: 16px;
+    text-align: right;
+  }
+
   .Type {
-    width: 180px;
-    
+    width: 180px;    
   }
 }
